# SEME2014_Axessim

./: .gitignore  README.md
Axessim/: PProject23.edp  project.edp  project_2.edp  project_3.edp
bibliography/: .gitignore  seme2014_axessim.bib
feelpp/: CMakeLists.txt  cwires.geo  multiwires.cpp  project.cfg  project.cpp
figs/: Th0.ps  bigcircle.ps
figures/: .gitignore  Th1.ps
figures/logos/.AppleDouble/: .Parent
figures/results/: poisson-0.ps  poisson-1.ps  poisson-10.ps  poisson-11.ps  poisson-12.ps  poisson-13.ps  poisson-14.ps  poisson-15.ps  poisson-2.ps  poisson-3.ps  poisson-4.ps  poisson-5.ps  poisson-6.ps  poisson-7.ps  poisson-8.ps  poisson-9.ps
figures/results/figs/: mesh-1.ps  poisson-0.ps  poisson-1.ps  poisson-2.ps  poisson-3.ps  poisson-4.ps  sol.ps
figures/results/figs2/: mesh.ps  (+2 more)
freefempp/: animFigs.sh  gmsh_test.edp  project.edp  project23.edp  project_23.edp  project_full.edp  project_gmsh.edp
geo/: multiwires.edp  multiwires.geo
mesh/: multiwires10.msh  multiwires2.msh  multiwires5.msh
presentation/: Makefile  core.aux  core.nav  core.out  core.tex  core.toc  intro.aux  intro.tex  prob1.aux  prob1.tex  prob2.aux  prob2.tex  ref.aux  seme2014_axessim.bib  test.tex  testjoub.tex
report/: Makefile  README.md  elsarticle-num.bst  elsarticle.cls  report.tex  seme2014_axessim.bib
report/chapters/: introduction.tex  model.tex  results.tex
report/tmp/: seme2014_axessim.bib
slides/: Makefile  header.sty  intro.tex  logos  prob1.tex  prob2.tex  seme2014_axessim.bib  slides.tex  test.tex  testabd.tex  testgui.tex  testjoub.tex
(+2 files in other folders)
